2012-07-20  Doug Evans  <dje@google.com>

	* NEWS: Document new options "set/show use-deprecated-index-sections",
	and delete reference to --use-deprecated-index-sections.
	* symfile.h (use_deprecated_index_sections): Delete.
	* dwarf2read.c (use_deprecated_index_sections): Make static.
	(read_index_from_section): Update wording of how to load
	deprecated index sections.
	(_initialize_dwarf2_read): New options
	"set/show use-deprecated-index-sections".
	* main.c (captured_main): Delete --use-deprecated-index-sections.

2012-07-18  Joel Brobecker  <brobecker@adacore.com>

	* version.in: Set version to 7.4.91.20120718-cvs.

2012-07-18  Joel Brobecker  <brobecker@adacore.com>

	GDB 7.4.91 released.

2012-07-18  Joel Brobecker  <brobecker@adacore.com>

	* NEWS: Replace "Changes since GDB 7.4" with "Changes in GDB 7.5".

2012-07-18  Joel Brobecker  <brobecker@adacore.com>

	* version.in: Update GDB version number to 7.4.91.

2012-07-18  Joel Brobecker  <brobecker@adacore.com>

	* configure.ac (development): Set to false.
	* configure: Regenerate.

2012-07-18  Joel Brobecker  <brobecker@adacore.com>

	GDB 7.5 branch created (branch timestamp: 2012-07-18 03:22 UTC)
	* version.in: Bump version to 7.4.90.20120718-cvs.

2012-07-16  Jan Kratochvil  <jan.kratochvil@redhat.com>

	PR 11914
	* f-valprint.c (info_common_command): New variable frame_id.
	Reinitialize FI form FRAME_ID after each print_variable_and_value.
	* printcmd.c (print_variable_and_value): Extend function comment.
	Add comment for invalidated FRAME.
	* stack.c (backtrace_command_1): New variable frame_id.  Reinitialize
	FI form FRAME_ID after each print_frame_local_vars.
	(struct print_variable_and_value_data): Change frame to frame_id.
	(do_print_variable_and_value): New variable frame, initialize it from
	p->frame_id.  Add comment for invalidated FRAME.
	(print_frame_local_vars, print_frame_arg_vars): New function comment.
	Update CB_DATA.FRAME to CB_DATA.FRAME_ID initialization.  Add comment